# open-hwp

./: .gitignore  README.md
contracts/: engine-interface-v1.md
docs/: OFFICIAL_RESEARCH.md
docs/plans/: 2026-04-18-hwp-parser-and-lossy-import-plan.md  2026-04-19-desktop-word-like-editor-plan.md
engines/openhwp-zig/: README.md  build.zig
engines/openhwp-zig/docs/: OFFICIAL_RESEARCH.md
engines/openhwp-zig/src/: convert.zig  formats.zig  main.zig
interfaces/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
interfaces/desktop/electron/: main.cjs  preload.cjs
interfaces/desktop/src/: App.tsx  electron-api.d.ts  engine.ts  styles.css
interfaces/desktop/src-tauri/: Cargo.toml  tauri.conf.json
interfaces/desktop/src-tauri/capabilities/: default.json
interfaces/desktop/src-tauri/icons/: icon.icns
interfaces/desktop/src-tauri/src/: lib.rs  main.rs
interfaces/desktop/src/components/: DocumentCanvas.tsx  DocumentHome.tsx  EditorShell.tsx  ImportBanner.tsx  InspectorPanel.tsx  SectionSidebar.tsx  StatusBar.tsx
interfaces/desktop/src/types/: document.ts
interfaces/gui/: README.md
interfaces/tui/: README.md
src/: convert.zig  hwp.zig  hwpx.zig  main.zig  utils.zig  workbench.zig  xml_tools.zig
